# Learning_OpenGL

./: README.md
OpenGL-ModularProject/: CMakeLists.txt
OpenGL-ModularProject/include/: drawObject.hpp  elementBufferObject.hpp  shaderSource.hpp  vertexArrayObject.hpp  vertexBufferObject.hpp  windowManager.hpp
OpenGL-ModularProject/include/glad/: gl.h
OpenGL-ModularProject/resources/shaders/: default.frag  default.vert
OpenGL-ModularProject/src/: drawObject.cpp  elementBufferObject.cpp  main.cpp  shaderSource.cpp  vertexArrayObject.cpp  vertexBufferObject.cpp  windowManager.cpp
OpenGL-basics/: CMakeLists.txt
OpenGL-basics/src/: basicWindowCreation.cpp  doubleTriangles.cpp  drawTriangle.cpp  glad.c  tripleTriangles.cpp
include/glad/: glad.h
src/: drawTriangle.cpp  slowBlinkWindow.cpp  tripleTriangles.cpp
